[project]
name = "aranet4-archiver"
version = "0.1.0"
description = "Python scripts to periodically update a db with co2 measures from aranet4 and to plot all the history."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aranet4>=2.5.1",
    "dotenv>=0.9.9",
    "fire>=0.7.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
]
